Fix contrast bugs with the buttons

--- a/static/xterm.css
+++ b/static/xterm.css
@@ -186,7 +186,7 @@ button {
 #loadsheet {
     width: 200px;
     height: 40px;
-    background-color: #69df69;
+    background-color: green;
     border: 1px solid grey;
     color: white;
     text-transform: uppercase;
